--- a/.server.env.template
+++ b/.server.env.template
@@ -12,3 +12,5 @@ NEW_USER_NAME="boomerang"
 NEW_USER_PASSWORD="%NEW_USER_PASSWORD%"
 ALERT_EMAIL="alerts@boomerangvpn.com"
 SERVER_NAME="boomerang-vpn"
+
+CLIENT_NAME="client1"
